test/parser/struct_member_access_error.dmz
// RUN: (dmz %s -ast-dump 2>&1 || true) | filecheck %s
struct Color {
    r: i32,
    g: i32,
    b: i32,
}

fn main() -> void {
    let s = Color {r: 0, g: 1, b: 2};
    
    let r = s.;
    // CHECK: [[# @LINE -1 ]]:15: error: expected member identifier or '*'

    let r = s().r.x();

    s.r.x();
}
